--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Common",
+  "name": "common",
   "version": "1.0.0",
   "description": "Setting up webpack.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
