--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/atharvashukla/Common#readme",
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "csv-loader": "^3.0.3",
     "file-loader": "^6.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.20"
