--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "css-loader": "^5.0.0",
     "csv-loader": "^3.0.3",
     "file-loader": "^6.1.1",
+    "json5": "^2.1.3",
     "style-loader": "^2.0.0",
+    "toml": "^3.0.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0",
-    "xml-loader": "^1.2.1"
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.20"
