--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/atharvashukla/Common#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "csv-loader": "^3.0.3",
     "file-loader": "^6.1.1",
+    "html-webpack-plugin": "^4.5.0",
     "json5": "^2.1.3",
     "style-loader": "^2.0.0",
     "toml": "^3.0.0",
