--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node server.js",
     "build": "webpack"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "csv-loader": "^3.0.3",
+    "express": "^4.17.1",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "json5": "^2.1.3",
@@ -29,6 +31,7 @@
     "toml": "^3.0.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0",
+    "webpack-dev-middleware": "^3.7.2",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
