--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common",
+  "name": "webpack",
   "version": "1.0.0",
   "description": "Setting up webpack.",
   "private": true,
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atharvashukla/Common.git"
+    "url": "https://github.com/atharvashukla/webpack.git"
   },
   "keywords": [],
   "author": "Atharva Shukla",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/atharvashukla/Common/issues"
+    "url": "https://github.com/atharvashukla/webpack/issues"
   },
-  "homepage": "https://github.com/atharvashukla/Common#readme",
+  "homepage": "https://github.com/atharvashukla/webpack#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
